# smart-garden

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
smartgarden/: manage.py
smartgarden/smartgarden/: asgi.py  settings.py  urls.py  wsgi.py
