[tool.poetry]
name = "smart-garden"
version = "0.1.0"
description = "Smart Garden"
authors = ["Nick de Heras <nickdeheras@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
wheel = "^0.37.1"
Django = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
py_version = 39
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
src_paths = ["src", "tests"]

[tool.black]
target-version = ['py38']
line-length = 88
